--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.1",
     "react": "^17.0.0",
     "react-beautiful-dnd": "^10.0.4",
     "react-dom": "^16.8.3",
+    "react-redux": "^8.0.2",
     "react-scripts": "^3.4.1",
     "spectre.css": "^0.5.8"
   },
