--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.8.1",
+    "material-ui": "^0.20.2",
     "react": "^17.0.0",
     "react-beautiful-dnd": "^10.0.4",
     "react-dom": "^16.8.3",
